--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -368,15 +368,16 @@ div.mobile-container > div.cancel{
         border: 1px solid #fff;
     }  
     div.chat::after{
-        content: '';
-        height: 0rem;
-        width: 0rem;
+        content: "";
+        height: 4.75rem;
+        width: 4.75rem;
         background: var(--primary-color-2);
         color: var(--primary-color-1);
         position: absolute;
+        overflow: hidden;
         top: 50%;
         left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        transform: translateX(-50%) translateY(-50%) scale(0);
         border-radius: 50%;
         display: flex;
         justify-content: center;
@@ -388,7 +389,6 @@ div.mobile-container > div.cancel{
         content: "Let's Talk";
         /* font-size: var(--font-20); */
         text-align: center;
-        height: 4.75rem;
-        width: 4.75rem;
+        transform: translateX(-50%) translateY(-50%) scale(1);
     }
 }
