--- a/src/Styles/services.css
+++ b/src/Styles/services.css
@@ -1,4 +1,4 @@
-div.services-container.moved{
+div.servicess-container.moved{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -15,7 +15,7 @@ div.services-container.moved{
     gap:3.125rem;
     transition: all ease 0.5s;
 }
-div.services-container{
+div.servicess-container{
     /* transform: translateX(0%); */
     transform: translateX(500%) translateY(-50%);
     position: absolute;
@@ -35,7 +35,7 @@ svg.cancel-svg{
     right: 3%;
     cursor: pointer;
 }
-div.services-container > div > div:nth-of-type(1){
+div.servicess-container > div > div:nth-of-type(1){
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -43,14 +43,14 @@ div.services-container > div > div:nth-of-type(1){
     gap: .5rem;
     margin-block-end: 1.75rem;
 }
-div.services-container > div > div:nth-of-type(2)  input{
+div.servicess-container > div > div:nth-of-type(2)  input{
     width: 1.1875rem;
     height: 1.1875rem;
     border: 1px solid #000;
     margin-inline: .5rem;
     margin-block-end: 1rem;
 }
-div.services-container > div > div:nth-of-type(2)  label{
+div.servicess-container > div > div:nth-of-type(2)  label{
     color: #000;
     font-size: 1rem;
     font-weight: 400;
@@ -77,7 +77,7 @@ div.consulting-container-body > div > label{
     width: calc(100% - 1.6875rem);
 }
 @media screen and (max-width: 768px) {
-    div.services-container.moved{
+    div.servicess-container.moved{
         position: absolute;
         top: 0%;
         left: 0%;
@@ -91,7 +91,7 @@ div.consulting-container-body > div > label{
         padding-block-start: 1.75rem;
         grid-template-columns:  1fr;
     }
-    div.services-container{
+    div.servicess-container{
         /* transform: translateX(0%); */
         transform: translateX(500%) translateY(-50%);
         position: absolute;
@@ -105,7 +105,7 @@ div.consulting-container-body > div > label{
         grid-template-columns:  1fr;
     }
 
-    div.services-container > div > div:nth-of-type(1) {
+    div.servicess-containers > div > div:nth-of-type(1) {
         align-items: start; 
     }
 }
